--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,27 @@ body {
 }
 
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
+    max-width:auto;
+    margin:0%;
+    padding:0%;
+    background-image: url("https://cdn.pixabay.com/photo/2018/02/20/13/46/earthquake-3167693_1280.jpg");
+      }
+
 
 h1 {
     text-align: center;
-}
+    border-radius: 25px;
+    background-color: powderblue;
+    padding: 20px;
+    height: 50px;
+    }
 
 .search-container {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
 }
+
 
 input[type="text"], input[type="date"], button {
     padding: 10px;
